# ArchiveFlow

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
.opencode/plans/: 2026-03-21-hashcat-gpu-integration.md
docs/benchmarks/: 2026-03-21-recovery-baseline.md
docs/plans/: 2026-03-21-capability-and-engineering.md  2026-03-21-config-panel-redesign.md  2026-03-21-cyberpunk-boot-screen-design.md  2026-03-21-cyberpunk-boot-screen.md  2026-03-21-parallel-recovery-engine-design.md  2026-03-21-parallel-recovery-engine.md  (+2 more)
fixtures/: README.md
fixtures/7z/: empty.7z  (+2 more)
scripts/: tauri-dev-server.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: create_7z_fixtures.rs
src-tauri/src/: benchmarks.rs  errors.rs  lib.rs  main.rs
src-tauri/src/app/: commands.rs  mod.rs  setup.rs
src-tauri/src/commands/: archive_commands.rs  audit_commands.rs  export_commands.rs  mod.rs  recovery_commands.rs  task_commands.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/domain/: archive.rs  audit.rs  mod.rs  recovery.rs  task.rs
src-tauri/src/services/: archive_service.rs  audit_service.rs  hashcat_service.rs  mod.rs  recovery_service.rs
src-tauri/src/services/hashcat_service/: args.rs  detection.rs  gpu_engine.rs  runner.rs  zip_aes_extract.rs
src-tauri/src/services/recovery_service/: engine.rs  generators.rs  passwords.rs  tests.rs  workers.rs
(+31 files in other folders)
