[package]
name = "archive-flow"
version = "26.3.21+build.2"
description = "加密压缩包访问辅助工具 - Encrypted Archive Access Assistant"
authors = ["ArchiveFlow"]
license = "MIT"
repository = "https://github.com/wildcatDownstairs/ArchiveFlow"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
zip = "2"
sevenz-rust = { version = "0.6", features = ["aes256"] }
unrar = "0.5"
num_cpus = "1"

[dev-dependencies]
tempfile = "3"
